--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,17 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   </head>
 
-  <body>
+  <body class="bg-white">
+    <nav class="navbar navbar-light p-3" style="background-color: #e3f2fd;">
+      <a class="navbar-brand" href="#">
+        Simple AirBnB
+      </a>
+      <%= link_to 'Add flat', new_flat_path, class: 'btn btn-outline-primary' %>
+    </nav>
     <%= yield %>
   </body>
 </html>
