--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,9 +1,9 @@
-<div class="container m-4">
+<div class="container mt-4">
   <div class="row">
     <h1>All our flats (<%= @flats.count %>)</h1>
     <% @flats.each do |flat| %>
-      <div class="col">
-        <div class="card bg-light">
+      <div class="col-6">
+        <div class="card bg-light mb-4">
         <div class="card-body">
           <h4 class='card-title mb-3'><%= flat.name %></h4>
           <p class="card-subtitle mb-3"><%= flat.address %></p>
@@ -14,7 +14,11 @@
             <%= flat.price_per_night %>
           </p>
         </div>
-        <div class="card-footer bg-white"><%= link_to 'more info', flat_path(flat) %></div>
+        <div class="card-footer bg-white">
+          <%= link_to 'more info', flat_path(flat) %>
+          <%= link_to 'edit', edit_flat_path(flat), class: 'text-warning' %>
+          <%= link_to 'remove', flat_path(flat), method: :delete, data: { confirm: "Whoa! Are you sure?"}, class: 'text-danger' %>
+        </div>
       </div>
       </div>
     <% end %>
